# yuanli-os-ops

./: .gitignore  AGENTS.md  README.md  post-task-sync.sh
FORCE-CLAW/: BLUEPRINT.md  README.md  YUANLI_OS.md  YUANLI_OS_3X3_AUDIT.md  YUANLI_OS_3X3_EVOLUTION.md  (+2 more)
FORCE-CLAW/feishu-short-video-growth-mvp/: .env.example  README.md  deployment-checklist.md  pyproject.toml  run_demo.py  run_local.py  workflow_brief.json
FORCE-CLAW/feishu-short-video-growth-mvp/docs/: README.md  dify-feishu-bridge.md  dify-feishu-fixed-flow.md  feishu-build-runbook.md  observed-feishu-state-2026-03-10.md
FORCE-CLAW/feishu-short-video-growth-mvp/runtime-artifacts/docs/: draft-topic-5c1a41de38.md
FORCE-CLAW/feishu-short-video-growth-mvp/runtime-artifacts/publish/: draft-topic-5c1a41de38-publish-package.json
FORCE-CLAW/feishu-short-video-growth-mvp/runtime-artifacts/state/: content_draft.json  evolution_rules.json  full_run_summary.json  topic_candidates_ranked.json
FORCE-CLAW/feishu-short-video-growth-mvp/src/feishu_workflow_app/: __init__.py  config.py  runtime.py  server.py
FORCE-CLAW/feishu-short-video-growth-mvp/src/feishu_workflow_app/adapters/: __init__.py  contracts.py  example_short_video_chain.py
FORCE-CLAW/feishu-short-video-growth-mvp/src/feishu_workflow_app/workflows/: __init__.py  short_video_growth.py
FORCE-CLAW/feishu-short-video-growth-mvp/workflow-pack/short-video-growth/: acceptance-checklist.md  bitable-schema.md  research-script-doc-template.md  sample-platform-metrics.csv  sample-topic-leads.json  workflow-brief.md  workflow-pack.json
(+228 files in other folders)
