[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-short-video-growth-mvp"
version = "0.1.0"
description = "Minimal Python scaffold for 原力创业短视频增长MVP"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
